added JWT and Link Crud

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bookshelf": "^0.13.3",
     "dotenv": "^5.0.1",
     "hapi": "^17.5.1",
+    "hapi-auth-jwt2": "^8.1.0",
     "knex": "^0.14.6",
     "mysql": "^2.15.0"
   }
