--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
   "dependencies": {
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
+    "bcrypt": "^2.0.1",
     "bookshelf": "^0.13.3",
     "dotenv": "^5.0.1",
     "hapi": "^17.5.1",
     "hapi-auth-jwt2": "^8.1.0",
+    "jsonwebtoken": "^8.3.0",
     "knex": "^0.14.6",
     "mysql": "^2.15.0"
+  },
+  "devDependencies": {
+    "eslint-config-google": "^0.9.1"
   }
 }
